# mnistvb

./: .gitignore  MNISTVB.cabal  README.md
src/: Utils.hs  VB.hs
test/: Spec.hs
