name:                MNISTVB
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/commercialhaskell/MNISTVB#readme
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     VB
                     , Utils
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , hmatrix
                     , math-functions
                     , mwc-random
                     , primitive >= 0.6
                     , vector >= 0.10.12.3
  default-language:    Haskell2010

executable MNISTVB-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       MNISTVB
                     , base
                     , hmatrix
                     , mwc-random
                     , primitive >= 0.6
                     , vector >= 0.10.12.3
  default-language:    Haskell2010

test-suite MNISTVB-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       MNISTVB
                     , base
                     , hmatrix
                     , mwc-random
                     , primitive >= 0.6
                     , vector >= 0.10.12.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/commercialhaskell/MNISTVB
